Restructuring and renaming

--- a/_posts/2025-03-28-cwc189-shelf.md
+++ b/_posts/2025-03-28-cwc189-shelf.md
@@ -1,11 +1,8 @@
 ---
 title: "Create with Clint Weekly Challenge 189 - Shelf"
 last_modified_at: 2025-03-23T10:20:02-05:00
-categories:
-  - BlenderRender
 tags:
-  - Blender
-  - Night Cafe
+  - blender-biz
 toc: true
 ---
 
@@ -73,8 +70,5 @@ music_for_video](https://pixabay.com/music/modern-classical-sad-21403/) on Pixab
   - Dude animation
   - Shadow
   - Render time: 🕑10hrs
-![Basic scene as a test](/assets/images/2025-03-24-Shelf.png "Much better off going for projects that are actually in reach. Having fun still!")
 
-<!-- ## 2025-03-29 Threejs exploded view
-  - Item 1  
-  ![Basic scene as a test](/assets/images/2025-03-30-WCCC-Basic-Scene.png "If I've learned anything, it's start REALLY simple and build on solid ground") -->
+![Basic scene as a test](/assets/images/cwc/189-shelf/2025-03-24-shelf.png "Much better off going for projects that are actually in reach. Having fun still!")
