--- a/_posts/2025-03-29-cwc188-spores.md
+++ b/_posts/2025-03-29-cwc188-spores.md
@@ -1,6 +1,9 @@
 ---
 title: "Create with Clint Weekly Challenge 188 - Spores"
 last_modified_at: 2025-03-30T10:20:02-05:00
+header:
+  teaser: /assets/images/placeholder.jpg
+  image: /assets/images/placeholder-banner.png
 tags:
   - blender-biz
 toc: true
