--- a/_posts/2025-04-02-cwc-190-impact_v1.md
+++ b/_posts/2025-04-02-cwc-190-impact_v1.md
@@ -1,10 +1,12 @@
 ---
 title: "Create with Clint Weekly Challenge 90 - Impact V1 - Abandoned"
 last_modified_at: 2025-04-02T16:20:02-05:00
-categories:
-  - Blender Animations
+header:
+  teaser: /assets/images/placeholder.jpg
+  image: /assets/images/placeholder-banner.png
 tags:
-  - Blender
+  - blender-biz
+  - create-with-clint
 toc: true
 ---
 
