--- a/_posts/2025-04-05-cwc-191-lone.md
+++ b/_posts/2025-04-05-cwc-191-lone.md
@@ -1,10 +1,12 @@
 ---
 title: "Create with Clint Weekly Challenge 91 - Lone"
 last_modified_at: 2025-04-12T16:20:02-05:00
-categories:
-  - Blender Animations
+header:
+  teaser: /assets/images/placeholder.jpg
+  image: /assets/images/placeholder-banner.png
 tags:
-  - Blender
+  - blender-biz
+  - create-with-clint
 toc: true
 ---
 
