--- a/_posts/2025-05-03-cwc-194-chop.md
+++ b/_posts/2025-05-03-cwc-194-chop.md
@@ -1,10 +1,12 @@
 ---
 title: "Create with Clint Weekly Challenge #194: Chop"
 last_modified_at: 2025-05-03T16:20:02-05:00
-categories:
-  - Blender Biz
+header:
+  teaser: /assets/images/placeholder.jpg
+  image: /assets/images/placeholder-banner.png
 tags:
-  - CreateWithClint
+  - create-with-clint
+  - blender-biz
 toc: true
 ---
 
