--- a/_posts/2025-05-18-wccc-2025-wk-20-errors.md
+++ b/_posts/2025-05-18-wccc-2025-wk-20-errors.md
@@ -1,12 +1,14 @@
 ---
 title: "WCCChallenge 2025 Week 20 - Errors"
 last_modified_at: 2025-05-18T16:20:02-05:00
-categories:
-  - Coding
+header:
+  teaser: /assets/images/placeholder.jpg
+  image: /assets/images/placeholder-banner.png
 tags:
-  - ThreeJS
-  - WCCC
-  - Blender
+  - threejs
+  - wccc
+  - blender-biz
+  - coding
 toc: true
 ---
 
