--- a/_posts/2025-05-25-wccc-2025-wk-21-17-squares.md
+++ b/_posts/2025-05-25-wccc-2025-wk-21-17-squares.md
@@ -1,11 +1,13 @@
 ---
 title: "WCCChallenge 2025 Week 21 - 17 Squares"
 last_modified_at: 2025-05-25T16:20:02-05:00
-categories:
-  - Coding
+header:
+  teaser: /assets/images/placeholder.jpg
+  image: /assets/images/placeholder-banner.png
 tags:
-  - ThreeJS
-  - WCCC
+  - coding
+  - threejs
+  - wccc
 toc: true
 ---
 
