--- a/_posts/2025-05-30-cwc-197-escape.md
+++ b/_posts/2025-05-30-cwc-197-escape.md
@@ -1,10 +1,12 @@
 ---
 title: "Create With Clink Weekly Challenge 197 - 'Escape'"
 last_modified_at: 2025-05-31T16:20:02-05:00
-categories:
-  - Blender Biz
+header:
+  teaser: /assets/images/placeholder.jpg
+  image: /assets/images/placeholder-banner.png
 tags:
-  - CreateWithClint
+  - blender-biz
+  - create-with-clint
 toc: true
 ---
 
