--- a/_posts/2025-04-02-cwc-190-impact.md
+++ b/_posts/2025-04-02-cwc-190-impact.md
@@ -2,8 +2,8 @@
 title: "Create with Clint Weekly Challenge 90 - Impact"
 last_modified_at: 2025-04-02T16:20:02-05:00
 header:
-  teaser: /assets/images/placeholder.jpg
-  image: /assets/images/placeholder-banner.png
+  teaser: /assets/images/cwc/190-impact/teaser.png
+  image: /assets/images/cwc/190-impact/banner.png
 tags:
   - blender-biz
   - create-with-clint
