--- a/_posts/2025-04-05-cwc-191-lone.md
+++ b/_posts/2025-04-05-cwc-191-lone.md
@@ -2,8 +2,8 @@
 title: "Create with Clint Weekly Challenge 91 - Lone"
 last_modified_at: 2025-04-12T16:20:02-05:00
 header:
-  teaser: /assets/images/placeholder.jpg
-  image: /assets/images/placeholder-banner.png
+  teaser: /assets/images/cwc/191-lone/teaser.png
+  image: /assets/images/cwc/191-lone/banner-full.png
 tags:
   - blender-biz
   - create-with-clint
@@ -155,11 +155,11 @@ Check out his awesome [YouTube channel](https://www.youtube.com/c/pwnisher) or b
 
 Render View
 
-![What they see](/assets/images/2025-04-10_Lone_ButtonPress.jpg)
+![What they see](/assets/images/cwc/191-lone/2025-04-10_Lone_ButtonPress.jpg)
 
 Working View 😅
 
-![What I see](/assets/images/2025-04-10_Lone_ButtonPress2.jpg)
+![What I see](/assets/images/cwc/191-lone/2025-04-10_Lone_ButtonPress2.jpg)
 
 ## 2025-04-10 8:00 Clean rigging and posing in another blender file 🕒1hr
 - Rigged and posed in MUCH faster time = very satisfying
@@ -167,14 +167,14 @@ Working View 😅
 - Tried using a bone constraint to track the path of the toilet module, but gave up on that.
 - Test render: vampire potato
 
-![Why you no see the potato in the reflection??](/assets/images/2025-04-10_SpacePotato.png)
+![Why you no see the potato in the reflection??](/assets/images/cwc/191-lone/2025-04-10_SpacePotato.png)
 
 ## 2025-04-10 17:20 Tightening up timeline and bringing elements together --> render time 🕒2hr
 - Tightened up timing and synced action with the music
 - Sorted out issues with the GLTF scene not being able to be appended properly
 - Brought in my measurement bois
 
-![I like this view](/assets/images/2025-04-11%20Lone.jpg)
+![I like this view](/assets/images/cwc/191-lone/2025-04-11%20Lone.jpg)
 
 ## 2025-04-11 22:00 Ooft out of time!
 - Discovered that I had my settings wrong for the outdoor scenes and my poor laptop (with a more powerful GPU) rendered for a good 9 hrs and only go through 100 of the 750 frames I was hoping for
