--- a/_posts/2025-05-05-wccc-2025-wk-19-destijl.md
+++ b/_posts/2025-05-05-wccc-2025-wk-19-destijl.md
@@ -1,12 +1,12 @@
 ---
-title: "WCCChallenge 2025 Week 19 - De Stijl"
+title: WCCChallenge 2025 Week 19 - De Stijl
 last_modified_at: 2025-05-05T16:20:02-05:00
 header:
   teaser: /assets/images/placeholder.jpg
   image: /assets/images/placeholder-banner.png
 tags:
+  - creative-coding
   - p5js
-  - coding
   - wccc
 toc: true
 ---
