--- a/_posts/2025-05-18-wccc-2025-wk-20-errors.md
+++ b/_posts/2025-05-18-wccc-2025-wk-20-errors.md
@@ -1,14 +1,14 @@
 ---
-title: "WCCChallenge 2025 Week 20 - Errors"
+title: WCCChallenge 2025 Week 20 - Errors
 last_modified_at: 2025-05-18T16:20:02-05:00
 header:
   teaser: /assets/images/placeholder.jpg
   image: /assets/images/placeholder-banner.png
 tags:
+  - blender-biz
+  - creative-coding
   - threejs
   - wccc
-  - blender-biz
-  - coding
 toc: true
 ---
 
