--- a/_posts/2025-05-01-wccc-2025-wk-18-earth.md
+++ b/_posts/2025-05-01-wccc-2025-wk-18-earth.md
@@ -1,11 +1,11 @@
 ---
-title: "WCCChallenge 2025 Week 18 - Earth"
+title: WCCChallenge 2025 Week 18 - Earth
 last_modified_at: 2025-05-01T16:20:02-05:00
 header:
   teaser: /assets/images/placeholder.jpg
   image: /assets/images/placeholder-banner.png
 tags:
-  - coding
+  - creative-coding
   - threejs
   - wccc
 toc: true
