--- a/_posts/2025-04-19-wccc-2025-wk-16-filter.md
+++ b/_posts/2025-04-19-wccc-2025-wk-16-filter.md
@@ -2,8 +2,8 @@
 title: WCCChallenge 2025 Week 16 - Filter
 last_modified_at: 2025-04-20T16:20:02-05:00
 header:
-  teaser: /assets/images/placeholder.jpg
-  image: /assets/images/placeholder-banner.png
+  teaser: /assets/images/wccc/2025-wk16-filter/teaser.png
+  image: /assets/images/wccc/2025-wk16-filter/banner-sized.png
 tags:
   - blender-biz
   - creative-coding
@@ -13,7 +13,8 @@ toc: true
 ---
 
 # Final Live Code
-<iframe src="https://openprocessing.org/sketch/2620205/embed/?plusEmbedHash=8fa57113&userID=410675&plusEmbedTitle=true&show=sketch" width="720" height="720"></iframe>
+
+<iframe src="https://openprocessing.org/sketch/2620205/embed/?plusEmbedHash=8fa57113&userID=410675&plusEmbedTitle=true&show=sketch" width="400" height="400"></iframe>
 
 <!-- # Final Result - Video -->
 <!-- [![Watch the video](https://img.youtube.com/vi/4eS8dGd9_TI/maxresdefault.jpg)](https://youtu.be/4eS8dGd9_TI) -->
@@ -101,18 +102,18 @@ So, pretty much like a REAL tutor 🤣
 ## 2025-04-19 Most of the build... (or so I thought)
   - Alpacas are just stretch sheep, right? 
   
-  ![Blender biz](/assets/images/2025-04-19_StretchSheep.png "Seems legit 😅")
+  ![Blender biz](/assets/images/wccc/2025-wk16-filter/2025-04-19_StretchSheep.png "Seems legit 😅")
 
   - Baking textures. Took a little bit to get my head around, but now it's so handy...
-  ![Texture Baking](/assets/images/2025-04-19_AlpacaTexturing.png)
+  ![Texture Baking](/assets/images/wccc/2025-wk16-filter/2025-04-19_AlpacaTexturing.png)
 
   - InstancedMesh for the win
   
-  ![Stormtrooper Sheep](/assets/images/2025-04-19_SheepInstances.png) 
+  ![Stormtrooper Sheep](/assets/images/wccc/2025-wk16-filter/2025-04-19_SheepInstances.png) 
 
   - Changed the starting perspective and checked the alpacas... Hooray!
 
-  ![Stretch Sheep Success!](/assets/images/2025-04-19_AlpacaParty.jpg)
+  ![Stretch Sheep Success!](/assets/images/wccc/2025-wk16-filter/2025-04-19_AlpacaParty.jpg)
 
 
 ## 2025-04-20 Refactoring and finishing
