--- a/_posts/2025-05-01-wccc-2025-wk-18-earth.md
+++ b/_posts/2025-05-01-wccc-2025-wk-18-earth.md
@@ -2,8 +2,8 @@
 title: WCCChallenge 2025 Week 18 - Earth
 last_modified_at: 2025-05-01T16:20:02-05:00
 header:
-  teaser: /assets/images/placeholder.jpg
-  image: /assets/images/placeholder-banner.png
+  teaser: /assets/imageswccc/2025-wk18-earth/teaser.png
+  image: /assets/imageswccc/2025-wk18-earth/banner.png
 tags:
   - creative-coding
   - threejs
@@ -12,10 +12,8 @@ toc: true
 ---
 
 # Final Live Code
-<iframe src="https://openprocessing.org/sketch/2634514/embed/?plusEmbedHash=be87330e&userID=410675&plusEmbedTitle=true&show=sketch" width="600" height="600"></iframe>
 
-# Final Result - Video
-<!-- [![Watch the video](https://img.youtube.com/vi/4eS8dGd9_TI/maxresdefault.jpg)](https://youtu.be/4eS8dGd9_TI) -->
+<iframe src="https://openprocessing.org/sketch/2634514/embed/?plusEmbedHash=be87330e&userID=410675&plusEmbedTitle=true&show=sketch" width="600" height="600"></iframe>
 
 # Summary
 ## WCCChallenge Blurb
@@ -94,9 +92,6 @@ const geometry = new THREE.BoxGeometry(voxelSize, voxelSize, voxelSize);
     }
 ```
 
-<!-- ## Resources:
-- "Typewriter" by Metro on Sketchfab: [https://sketchfab.com/3d-models/typewriter-c212b517cbdd4fa1930ed31a45670d39](https://sketchfab.com/3d-models/typewriter-c212b517cbdd4fa1930ed31a45670d39) -->
-
 ## Stretch Goals/Extension Ideas
 - [ ] Meteor strike 😲
 
@@ -120,7 +115,7 @@ const geometry = new THREE.BoxGeometry(voxelSize, voxelSize, voxelSize);
   - Worked out a couple of things about applying colours to instance mesh
   - Claude helped me with dummy.scale.set(1) before things
    
-  ![Basic scene setup](/assets/images/2025-05-01_VoxelEarth.png "If I've learned anything, it's start REALLY simple and build on solid ground")
+  ![Basic scene setup](/assets/images/wccc/2025-wk18-earth/2025-05-01_VoxelEarth.png "If I've learned anything, it's start REALLY simple and build on solid ground")
 
 ## 2025-05-01 20:30 - 22:00 🕒 1.5hrs
  - Claude helped me refactor to make the thresholds work better
@@ -129,13 +124,13 @@ const geometry = new THREE.BoxGeometry(voxelSize, voxelSize, voxelSize);
  - setting different noiseZoom for clouds
  - adjusted colour bands to make more mantle and a slighter transition from grey to white in the clouds
 
-![Getting closer](/assets/images/2025-05-01_VoxelEarth2.png "Need more noise variation")
+![Getting closer](/assets/images/wccc/2025-wk18-earth/2025-05-01_VoxelEarth2.png "Need more noise variation")
 
-![Closer still](/assets/images/2025-05-01_VoxelEarth3.png "THAT's more  like it")
+![Closer still](/assets/images/wccc/2025-wk18-earth/2025-05-01_VoxelEarth3.png "THAT's more  like it")
 
-![Even closer still!](/assets/images/2025-05-01_VoxelEarth4.png "Still looking for perfomance boosts...")
+![Even closer still!](/assets/images/wccc/2025-wk18-earth/2025-05-01_VoxelEarth4.png "Still looking for perfomance boosts...")
 
 ## 2025-05-02 21:00 - 21:30 🕒1hr
-- GREAT performance boost by a) cutting out calculating positions every time and b) droppin ginstances that are scaled to zero anyway.
+- GREAT performance boost by a) cutting out calculating positions every time and b) dropping instances that are scaled to zero anyway.
 
-![Hooray! I think I'm done here!](/assets/images/2025-05-01_VoxelEarth5.png "Clouds are pleasingly fluffy")
+![Hooray! I think I'm done here!](/assets/images/wccc/2025-wk18-earth/2025-05-01_VoxelEarth5.png "Clouds are pleasingly fluffy")
