--- a/_posts/2025-05-03-cwc-194-chop.md
+++ b/_posts/2025-05-03-cwc-194-chop.md
@@ -2,16 +2,17 @@
 title: "Create with Clint Weekly Challenge #194: Chop"
 last_modified_at: 2025-05-03T16:20:02-05:00
 header:
-  teaser: /assets/images/placeholder.jpg
-  image: /assets/images/placeholder-banner.png
+  teaser: /assets/images/cwc/194-chop/teaser.png
+  image: /assets/images/cwc/194-chop/teaser.png
 tags:
   - create-with-clint
   - blender-biz
+  - rigging
 toc: true
 ---
 
 <!-- # The Final Result -->
-<!-- [![Watch the video](https://img.youtube.com/vi/4eS8dGd9_TI/maxresdefault.jpg)](https://youtu.be/4eS8dGd9_TI) -->
+[![Watch the video](https://img.youtube.com/vi/Dp1ggOsia3o/maxresdefault.jpg)](https://youtu.be/Dp1ggOsia3o)
 
 # Summary
 
@@ -37,7 +38,7 @@ Check out his awesome [YouTube channel](https://www.youtube.com/c/pwnisher) or b
   - When you parent with automatic weights, Blender attempts to assign vertex groups to bones
   - When weight painting, you can select the current bone you're interested in at the top of the screen
 
-![Selecting the current bone top of screen in weight paint mode](/assets/images/2025-05-05_Chop_SelectingWeightPaint.png "Took me WAY too long to find this")
+![Selecting the current bone top of screen in weight paint mode](/assets/images/cwc/194-chop/2025-05-05_Chop_SelectingWeightPaint.png "Took me WAY too long to find this")
 
 ## Resources:
 - ["Junk Wheel" model by Rex Hans on BlenderKit](https://www.blenderkit.com/asset-gallery-detail/16c92522-68f7-4a86-acea-de5ab230e70c/)
@@ -93,7 +94,7 @@ Check out his awesome [YouTube channel](https://www.youtube.com/c/pwnisher) or b
 ## 2025-04-05 Basic blockout 🕒1.5hrs
   - Made chop bot  
   
-  ![Needs more chest...](/assets/images/2025-05-03_ChopBot.png "I doubt the final version will be radically different")
+  ![Needs more chest...](/assets/images/cwc/194-chop/2025-05-03_ChopBot.png "I doubt the final version will be radically different")
 
   - Made chopped down tree
   
@@ -107,29 +108,29 @@ Check out his awesome [YouTube channel](https://www.youtube.com/c/pwnisher) or b
   - Camera now locked to the movement
   - Maybe it's all a bit fast? Can slow everything down later
 
-![A network of parents](/assets/images/2025-05-04_LotsOfParents.png "Hmmm I wonder how people usually manage a network of parents like this...")
+![A network of parents](/assets/images/cwc/194-chop/2025-05-04_LotsOfParents.png "Hmmm I wonder how people usually manage a network of parents like this...")
 
 ## 2025-05-05 Arm rigging a d animation 19:20 - 22:00 🕒 2hrs40m 
 - Learned a lot about rigging, vertex groups and weight painting. Namely, the many way you shouldn't do it and that internal faces are SUPER annoying
 - Eventually got the weight painting right
 - Got a basic 2 stage chop animation aaand stuffed it up again... but it's not so bad
 
-![Weight Paintint demo](/assets/images/2025-05-05_Chop_WeightPaintingNotMyFave.png)
+![Weight Paintint demo](/assets/images/cwc/194-chop/2025-05-05_Chop_WeightPaintingNotMyFave.png)
 
 ## 2025-05-09 The final push 🕒 3hrs
 - Fixed animation
 - Duplicated animated arms and adjusted angles to avoid self-intersections a little
 
-![Chop Bot upgrade](/assets/images/2025-05-09_LumberBotUpgrade.png "He makes me happy 🥰")
+![Chop Bot upgrade](/assets/images/cwc/194-chop/2025-05-09_LumberBotUpgrade.png "He makes me happy 🥰")
 
 
 - Offset the animation by 2 frames in this pattern: TR, ML, MR, BL, BR, TL
 - Chop Bot was clipping through the log so moved the second tree over
 - Found a cool tree
 
-![Tree](/assets/images/2025-05-09_TreeModel.png "Kitbashing is tricky to match styles")
+![Tree](/assets/images/cwc/194-chop/2025-05-09_TreeModel.png "Kitbashing is tricky to match styles")
 
-![Tree 2](/assets/images/2025-05-09_TreeTexturing.png "Booleans did weird things to my textures when applied. Don't apply in future??")
+![Tree 2](/assets/images/cwc/194-chop/2025-05-09_TreeTexturing.png "Booleans did weird things to my textures when applied. Don't apply in future??")
 
 - Spent a while learning all the ways NOT to get a slice of it in the middle
 - Cell fracture the target puck and apply rigid body physics to it
@@ -138,5 +139,5 @@ Check out his awesome [YouTube channel](https://www.youtube.com/c/pwnisher) or b
 - Added in sound effects
 - Sorted render settings
 
-![Final Scene](/assets/images/2025-05-09_ChopBotFinalClayView.png)
+![Final Scene](/assets/images/cwc/194-chop/2025-05-09_ChopBotFinalClayView.png)
 
