De Stijl update

--- a/_posts/2025-05-05-wccc-2025-wk-19-destijl.md
+++ b/_posts/2025-05-05-wccc-2025-wk-19-destijl.md
@@ -2,8 +2,8 @@
 title: WCCChallenge 2025 Week 19 - De Stijl
 last_modified_at: 2025-05-05T16:20:02-05:00
 header:
-  teaser: /assets/images/placeholder.jpg
-  image: /assets/images/placeholder-banner.png
+  teaser: /assets/images/wccc/2025-wk19-de-stijl/teaser.png
+  image: /assets/images/wccc/2025-wk19-de-stijl/banner.png
 tags:
   - creative-coding
   - p5js
@@ -12,6 +12,7 @@ toc: true
 ---
 
 # Live Code
+
 <iframe src="https://openprocessing.org/sketch/2643165/embed/?plusEmbedHash=04524ee8&userID=410675&plusEmbedTitle=true&show=sketch" width="600" height="600"></iframe>
 
 <!-- # Final Result - Video -->
@@ -80,23 +81,23 @@ function scaleFromPt(body, origin, pivot, scl, showCornerMarker){
 }
 ```
 
-  ![Isolate one step at a time](/assets/images/2025-05-05_WCCChallenge2025Wk19_Step1.png "Using Gemini to TEACH me, rather than blindly following it")
+  ![Isolate one step at a time](/assets/images/wccc/2025-wk19-de-stijl/2025-05-05_WCCChallenge2025Wk19_Step1.png "Using Gemini to TEACH me, rather than blindly following it")
 
 ## 2025-05-09 Pivoting to the 2D version for doability 🕒2hr
 - Started with just a grid
 
-![Biz](/assets/images/2025-05-10_DuStijl_Start.png)
+![Biz](/assets/images/wccc/2025-wk19-de-stijl/2025-05-10_DuStijl_Start.png)
 
 - Looping through and deciding if it's a 1 or 2 step in the x and y and, if so, excluding those points in future
 
-![Biz2](/assets/images/2025-05-10_deStijl_Hmmm.png)
+![Biz2](/assets/images/wccc/2025-wk19-de-stijl/2025-05-10_deStijl_Hmmm.png)
 
 - Hmmm a lot of overlap I'm seeing... must be missing excluding some points...
 
-![Biz3](/assets/images/2025-05-10_deStijl_Fixed.png)
+![Biz3](/assets/images/wccc/2025-wk19-de-stijl/2025-05-10_deStijl_Fixed.png)
 
 - Aha! It was the middle point in cases of step 2 in the x and y! 
 - Also, changing it so that it ends at the bounds
 - Also shifting it with translate to centre on the canvas
 
-![Biz4](/assets/images/2025-05-10_deStijl_BoundProblems.png)
+![Biz4](/assets/images/wccc/2025-wk19-de-stijl/2025-05-10_deStijl_BoundProblems.png)
