--- a/_posts/2025-05-18-wccc-2025-wk-20-errors.md
+++ b/_posts/2025-05-18-wccc-2025-wk-20-errors.md
@@ -2,8 +2,8 @@
 title: WCCChallenge 2025 Week 20 - Errors
 last_modified_at: 2025-05-18T16:20:02-05:00
 header:
-  teaser: /assets/images/placeholder.jpg
-  image: /assets/images/placeholder-banner.png
+  teaser: /assets/images/wccc/2025-wk20-errors/teaser.png
+  image: /assets/images/wccc/2025-wk20-errors/banner.png
 tags:
   - blender-biz
   - creative-coding
@@ -14,9 +14,6 @@ toc: true
 
 # Final Live Code
 <iframe src="https://openprocessing.org/sketch/2652072/embed/?plusEmbedHash=b8644ff8&userID=410675&plusEmbedTitle=true&show=sketch" width="600" height="600"></iframe>
-
-<!-- # Final Result - Video -->
-<!-- [![Watch the video](https://img.youtube.com/vi/4eS8dGd9_TI/maxresdefault.jpg)](https://youtu.be/4eS8dGd9_TI) --> -->
 
 # Summary
 ## WCCChallenge Blurb
@@ -160,7 +157,7 @@ if(chest){
 - Made the spinning wheel of death from Mac OS
 - Used what I'd JUST learned about UV Unwrapping to make the wrap pretty seamless around the edge
 
-![UV Unwrapping](/assets/images/2025-05-18_WCCChallenge2025Wk20_Errors_UV%20Unwrapping.png)
+![UV Unwrapping](/assets/images/wccc/2025-wk20-errors/2025-05-18_WCCChallenge2025Wk20_Errors_UV%20Unwrapping.png)
 - Used an elastic easing function to make the thing pop up out of the chest
 
 ```
@@ -185,11 +182,13 @@ if (wheel && wheelStart && wheelEnd) {
 ```
 - Positioned the cultist and chest
 - Chucked in a basic floor texture and had to call it day
-![The submitted scene](/assets/images/2025-05-18_WCCChallenge2025Wk20_Errors_FirstPass.png)
+
+![The submitted scene](/assets/images/wccc/2025-wk20-errors/2025-05-18_WCCChallenge2025Wk20_Errors_FirstPass.png)
 
 ## 2025-05-19 Finishing touches... or so I thought 😅
 - Fixed a weight painting issue where the keys on the monitor face were being left behind because they weren't influenced by the head bone 🤕
 - Used alphaMap to introduce a drop-off to the floor texture
+
 ![alphaMap](/assets/images/2025-05-19_WCCChallenge2025Wk20_Errors_Fix01_AlphaMap.png)
 
 ```
@@ -215,15 +214,15 @@ scene.add(floor);
 - Decided that many cultists was the way to go
 - Asked Claude.ai and Gemini to help me out with getting multiple animations to load up... it failed.
 
-![Big Issues with cloning](/assets/images/2025-05-26_WCCChallenge2025Wk02_Error_FrustratingErrors.png)
+![Big Issues with cloning](/assets/images/wccc/2025-wk20-errors/2025-05-26_WCCChallenge2025Wk02_Error_FrustratingErrors.png)
 - Made a clean version of the file where all I'm dealing with is loading up multiple models
 
-![Multiple Models](/assets/images/2025-05-26_WCCChallenge2025Wk02_Error_MultipleAnimations.png)
+![Multiple Models](/assets/images/wccc/2025-wk20-errors/2025-05-26_WCCChallenge2025Wk02_Error_MultipleAnimations.png)
 
 - Hmmm... so now I've got confusing issues with everything doubling up...
 
-![Mystery double-ups of everything](/assets/images/2025-05-26_WCCChallenge2025Wk02_Error_MysteryDoubles.png)
+![Mystery double-ups of everything](/assets/images/wccc/2025-wk20-errors/2025-05-26_WCCChallenge2025Wk02_Error_MysteryDoubles.png)
 
 - Aha! Turns out I'd declared and called init twice 😅 Made some gui controls to position the camera for autoRotate mode and totally calling it a day 🥰
 
-![Finished!](/assets/images/2025-05-26_WCCChallenge2025Wk02_Error_Done.png)
+![Finished!](/assets/images/wccc/2025-wk20-errors/2025-05-26_WCCChallenge2025Wk02_Error_Done.png)
