--- a/_posts/2025-05-25-wccc-2025-wk-21-17-squares.md
+++ b/_posts/2025-05-25-wccc-2025-wk-21-17-squares.md
@@ -2,16 +2,18 @@
 title: WCCChallenge 2025 Week 21 - 17 Squares
 last_modified_at: 2025-05-25T16:20:02-05:00
 header:
-  teaser: /assets/images/placeholder.jpg
-  image: /assets/images/placeholder-banner.png
+  teaser: /assets/images/wccc/2025-wk21-17-squares/teaser.png
+  image: /assets/images/wccc/2025-wk21-17-squares/banner.png
 tags:
   - creative-coding
   - threejs
   - wccc
+  - cannonjs
 toc: true
 ---
 
 # Final Live Code
+
 <iframe src="https://openprocessing.org/sketch/2658689/embed/?plusEmbedHash=9a60bf79&userID=410675&plusEmbedTitle=true&show=sketch" width="600" height="600"></iframe>
 
 # Final Result - Video
@@ -49,10 +51,10 @@ Join The Birb's Nest Discord community! [https://discord.gg/g5J6Ajx9Am](https://
 ## 2025-05-25 Vibe-coding
   - First test 
   
-  ![First Test](/assets/images/2025-05-25_WCCChallenge25Wk21_17Squares_01_FirstTest.png)
+  ![First Test](/assets/images/wccc/2025-wk21-17-squares/2025-05-25_WCCChallenge25Wk21_17Squares_01_FirstTest.png)
   - I like the background here
 
-![Added background](/assets/images/2025-05-25_WCCChallenge25Wk21_17Squares_02_GradientBackground.png)
+![Added background](/assets/images/wccc/2025-wk21-17-squares/2025-05-25_WCCChallenge25Wk21_17Squares_02_GradientBackground.png)
 
 - Mucked around with wall thickness
 - Got it to reset cubes we lose along the way
