--- a/_posts/2025-05-30-cwc-197-escape.md
+++ b/_posts/2025-05-30-cwc-197-escape.md
@@ -2,8 +2,8 @@
 title: "Create With Clink Weekly Challenge 197 - 'Escape'"
 last_modified_at: 2025-05-31T16:20:02-05:00
 header:
-  teaser: /assets/images/placeholder.jpg
-  image: /assets/images/placeholder-banner.png
+  teaser: /assets/images/cwc/197-escape/teaser.png
+  image: /assets/images/cwc/197-escape/banner.png
 tags:
   - blender-biz
   - create-with-clint
@@ -54,37 +54,37 @@ Check out his awesome [YouTube channel](https://www.youtube.com/c/pwnisher) or b
 
 ## 2025-05-28 18:00 - 19:00 🕒 1hr
   - First pass at a cute octopus 
-  ![Basic scene as a test](/assets/images/2025-05-30_Octopus.png)
+  ![Basic scene as a test](/assets/images/cwc/197-escape/2025-05-30_Octopus.png)
 
 ## 2025-05-30 20:00 - 2025-05-31 00:30 🙄 Smashing the rest out
 
   - Made a coral stick using a BlenderKit texture and kitbashing from SketchFab
-  ![Coral Bindle Stick](/assets/images/2025-05-30_Octopus_CoralStick.png)
+  ![Coral Bindle Stick](/assets/images/cwc/197-escape/2025-05-30_Octopus_CoralStick.png)
   
   - Adding suckers with the sculpt tool and masking: love it!
 
-  ![Suckers](/assets/images/2025-05-30_Octopus_Suckers.png)
+  ![Suckers](/assets/images/cwc/197-escape/2025-05-30_Octopus_Suckers.png)
   
   - Rigging and Posing a Tentacle
   
-  ![Rigging](/assets/images/2025-05-30_Octopus_RiggingOneTentacle.png)
+  ![Rigging](/assets/images/cwc/197-escape/2025-05-30_Octopus_RiggingOneTentacle.png)
 
 - Shape Key Left Eye
 
-![Biz](/assets/images/2025-05-30_Octopus_ShapeKeyLeftEye.png)
+![Biz](/assets/images/cwc/197-escape/2025-05-30_Octopus_ShapeKeyLeftEye.png)
 
 - Shape Key Right Eye
 
-![Biz](/assets/images/2025-05-30_Octopus_ShapeKeyRightEye.png)
+![Biz](/assets/images/cwc/197-escape/2025-05-30_Octopus_ShapeKeyRightEye.png)
 
 - Found a hyper-stylised work van, modified Jacques the cleaner shrimp from Finding Nemo JUST enough and slapped it clumsily on the side using a UV Image Texture
 
-![Work van](/assets/images/2025-05-30_Octopus_LogoDesign.png)
+![Work van](/assets/images/cwc/197-escape/2025-05-30_Octopus_LogoDesign.png)
 
 - Brought in a Coastal HDRI from Blender Kit for some lovely atmospheric lighting. Tried a couple of different ground plane setups, but ultimately I'd just run out of time for the 2AM Australian time deadline
 
-![Coastal HDRI](/assets/images/2025-05-31_FinalRenderStillSide%20(1).png "LOVE the immediate increase in atmosphere")
+![Coastal HDRI](/assets/images/cwc/197-escape/2025-05-31_FinalRenderStillSide%20(1).png "LOVE the immediate increase in atmosphere")
 
-![Coastal HDRI](/assets/images/2025-05-31_FinalRender.png "Go lil guy, go!")
+![Coastal HDRI](/assets/images/cwc/197-escape/2025-05-31_FinalRender.png "Go lil guy, go!")
 
 - Keyframed some really basic camera moves, pausing on the beats - probably could have used a LITTLE more time on the side of the van to let the viewer read it - but I didn't want to lose momentum. Would I tighten it up a little? YES! At the end of the day, projects are never finished, just published. Moving on!
