Testing correct tagging before proceding

--- a/_posts/2025-03-28-cwc189-shelf.md
+++ b/_posts/2025-03-28-cwc189-shelf.md
@@ -4,8 +4,7 @@ last_modified_at: 2025-03-23T10:20:02-05:00
 header:
   teaser: /assets/images/cwc/189-shelf/cwc-189-shelf-teaser.png
   image: /assets/images/cwc/189-shelf/cwc-189-shelf-banner.png
-tags:
-  - blender-biz
+tags: ["blender-biz", "create-with-clint"]
 toc: true
 ---
 
