--- a/_posts/2025-03-29-cwc188-spores.md
+++ b/_posts/2025-03-29-cwc188-spores.md
@@ -4,9 +4,7 @@ last_modified_at: 2025-03-30T10:20:02-05:00
 header:
   teaser: /assets/images/cwc/188-spores/cwc-188-spores-teaser.png
   image: /assets/images/cwc/188-spores/cwc-188-spores-banner.png
-tags:
-  - blender-biz
-  - create-with-clint
+tags: ["blender-biz", "create-with-clint"]
 toc: true
 ---
 
