Corrected how tags work I hope

--- a/_posts/2025-04-05-cwc-191-lone.md
+++ b/_posts/2025-04-05-cwc-191-lone.md
@@ -4,9 +4,7 @@ last_modified_at: 2025-04-12T16:20:02-05:00
 header:
   teaser: /assets/images/cwc/191-lone/teaser.png
   image: /assets/images/cwc/191-lone/banner-full.png
-tags:
-  - blender-biz
-  - create-with-clint
+tags: ["blender-biz", "create-with-clint"]
 toc: true
 ---
 
