--- a/_posts/2025-04-19-wccc-2025-wk-16-filter.md
+++ b/_posts/2025-04-19-wccc-2025-wk-16-filter.md
@@ -4,11 +4,7 @@ last_modified_at: 2025-04-20T16:20:02-05:00
 header:
   teaser: /assets/images/wccc/2025-wk16-filter/teaser.png
   image: /assets/images/wccc/2025-wk16-filter/banner-sized.png
-tags:
-  - blender-biz
-  - creative-coding
-  - threejs
-  - wccc
+tags: ["blender-biz", "creative-coding", "threejs", "wccc"] 
 toc: true
 ---
 
