--- a/_posts/2025-05-01-wccc-2025-wk-18-earth.md
+++ b/_posts/2025-05-01-wccc-2025-wk-18-earth.md
@@ -4,10 +4,7 @@ last_modified_at: 2025-05-01T16:20:02-05:00
 header:
   teaser: /assets/images/wccc/2025-wk18-earth/teaser.png
   image: /assets/images/wccc/2025-wk18-earth/banner.png
-tags:
-  - creative-coding
-  - threejs
-  - wccc
+tags: ["creative-coding", "threejs", "wccc"]
 toc: true
 ---
 
