--- a/_posts/2025-05-03-cwc-194-chop.md
+++ b/_posts/2025-05-03-cwc-194-chop.md
@@ -4,10 +4,7 @@ last_modified_at: 2025-05-03T16:20:02-05:00
 header:
   teaser: /assets/images/cwc/194-chop/teaser.png
   image: /assets/images/cwc/194-chop/teaser.png
-tags:
-  - create-with-clint
-  - blender-biz
-  - rigging
+tags: ["create-with-clint", "blender-biz", "rigging"]
 toc: true
 ---
 
