--- a/_posts/2025-05-05-wccc-2025-wk-19-destijl.md
+++ b/_posts/2025-05-05-wccc-2025-wk-19-destijl.md
@@ -4,10 +4,7 @@ last_modified_at: 2025-05-05T16:20:02-05:00
 header:
   teaser: /assets/images/wccc/2025-wk19-de-stijl/teaser.png
   image: /assets/images/wccc/2025-wk19-de-stijl/banner.png
-tags:
-  - creative-coding
-  - p5js
-  - wccc
+tags: ["creative-coding", "p5js", "wccc"]
 toc: true
 ---
 
