--- a/_posts/2025-05-25-wccc-2025-wk-21-17-squares.md
+++ b/_posts/2025-05-25-wccc-2025-wk-21-17-squares.md
@@ -4,11 +4,7 @@ last_modified_at: 2025-05-25T16:20:02-05:00
 header:
   teaser: /assets/images/wccc/2025-wk21-17-squares/teaser.png
   image: /assets/images/wccc/2025-wk21-17-squares/banner.png
-tags:
-  - creative-coding
-  - threejs
-  - wccc
-  - cannonjs
+tags: ["creative-coding", "threejs", "wccc", "cannonjs"]
 toc: true
 ---
 
