--- a/_posts/2025-05-18-wccc-2025-wk-20-errors.md
+++ b/_posts/2025-05-18-wccc-2025-wk-20-errors.md
@@ -4,11 +4,7 @@ last_modified_at: 2025-05-18T16:20:02-05:00
 header:
   teaser: /assets/images/wccc/2025-wk20-errors/teaser.png
   image: /assets/images/wccc/2025-wk20-errors/banner.png
-tags:
-  - blender-biz
-  - creative-coding
-  - threejs
-  - wccc
+tags: ["blender-biz", "creative-coding", "threejs", "wccc"]
 toc: true
 ---
 
