--- a/_posts/2025-05-30-cwc-197-escape.md
+++ b/_posts/2025-05-30-cwc-197-escape.md
@@ -4,9 +4,7 @@ last_modified_at: 2025-05-31T16:20:02-05:00
 header:
   teaser: /assets/images/cwc/197-escape/teaser.png
   image: /assets/images/cwc/197-escape/banner.png
-tags:
-  - blender-biz
-  - create-with-clint
+tags: ["blender-biz", "create-with-clint"]
 toc: true
 ---
 
